Add atk_bridge_set_event_context

to allow java-atk-wrapper to control in which thread events are
delivered.

See https://bugzilla.gnome.org/show_bug.cgi?id=760058